Dim direnv output

--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,8 @@
+# Dim direnv status messages
+export DIRENV_LOG_FORMAT=$'\033[2mdirenv: %s\033[0m'
+
+# Manually load direnv.
 nix_direnv_manual_reload
+
+# Load devshell from Flake.
 use flake . -Lv
