Cleanup flake setup

--- a/.envrc
+++ b/.envrc
@@ -1,8 +1,5 @@
-# Dim direnv status messages
-export DIRENV_LOG_FORMAT=$'\033[2mdirenv: %s\033[0m'
+export DIRENV_WARN_TIMEOUT=20s
 
-# Manually load direnv.
-nix_direnv_manual_reload
+eval "$(devenv direnvrc)"
 
-# Load devshell from Flake.
-use flake . -Lv
+use devenv
