--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 /result
 .pre-commit-config.yaml
 .luarc.json
+
+# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
